# LayoutOverlapDetector

./: CMakeLists.txt  README.md  setup.sh
include/: LayoutModel.h  OverlapEngine.h  Rectangle.h  WorkerThread.h
resources/: resources.qrc
resources/layouts/: cluster.json  edge_touch.json  nested_overlap.json  no_overlap.json  sample_layout.json  single_overlap.json
resources/qml/: MainView.qml
scripts/: generate_layout.py
src/: LayoutModel.cpp  OverlapEngine.cpp  WorkerThread.cpp  main.cpp
